2004-04-29 Alex Chapiro

	Support for I18N within spawner.

2004-03-25 David Inglis
	
	Added platform attribute to processlist extension
	
	* plugin.xml

2004-03-01 James Ciesielski

	Marked string as non-externalized
	
	* src/org/eclipse/cdt/internal/core/win32/ProcessList.java

2004-02-17 Alain Magloire

	Remove old Eclipse2.0 interface and
	use what 3.0 provides instead.

	* src/org/eclipse/cdt/internal/core/win32/ProcessList.java

2004-02-12 Alex Chapiro

	Update starter and spawner to use named pipes.
	Update the binaries.

2003-08-29 Alex Chapiro

	This patch just increase command line buffer up to OS limit (2K). It also
	replaces java/lang/Exception to java/io/IOException in order to unify error
	processing.

	* library/Win32ProcessEx.c
	* library/starter/starter.cpp
	* library/spawner.dsw
	* os/win32/x86/spawner.dll
	* os/win32/x86/starter.exe

2003-04-30 Alex Chapiro

	* library/listtasks: new Folder
	* library/listtasks/listtasks.cpp: New file.
	* library/listtasks/listtasks.dsp: New file.
	* library/listtasks/listtasks.dsw: New file.
	* library/listtasks/listtasks.h: New file.
	* library/listtasks/StdAfx.cpp: New file.
	* library/listtasks/StdAfx.h: New file.
	* os/win32/x86/listtasks.exe: Rebuild

2003-04-30 Alain Magloire

	* src/org/eclipse/cdt/internal/core/win32/ProcessList.java (parseTaskList):
	New method parsing the windows XP executable.
	(parseListTasks): New method parsing the executable that comes with CDT.

2003-04-24 Alex Chapiro

	* os/win32/x86/spawner.dll: Rebuild
	* library/Win32ProcessEx.c:
	Include additionnal functionality for interruption.
	* library/Spawner.h:
	Fix the headers.
	* library/raise.c:
	New file, implements interruption function.
	* src/library/spawner.dsp:
	Update, new file raise.c added.

2003-02-25 Alex Chapiro

	Fix for this type of problem:
		make CFLAGS="-D jek "
	
	* os/win32/x86/spawner.dll: Rebuild
	* os/win32/x86/starter.exe: Rebuild
	* library/starter/starter.cpp:
	Fix problem with embedded quotation